Force Gradle to compile files using UTF-8 encoding, fixes MOTD in 1.6.X clients

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ tasks.withType(AbstractCompile) {
 	classpath += configurations.shadow
 }
 
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+
 group 'protocolsupport'
 version '1.4.dev'
 
