--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,7 @@ dependencies {
 	compile fileTree(dir: dlDepsDirS, include: '*.jar')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '5.2'
+	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.1.1'
 }
 
 
@@ -129,6 +130,7 @@ shadowJar {
 	relocate 'net.jcip', 'protocolsupport.libs.net.jcip'
 	relocate 'raknetserver', 'protocolsupport.libs.raknetserver'
 	relocate 'udpserversocketchannel', 'protocolsupport.libs.udpserversocketchannel'
+	relocate 'it.unimi.dsi.fastutil', 'protocolsupport.libs.it.unimi.dsi.fastutil'
 }
 
 
