--- a/gradle/helper.gradle
+++ b/gradle/helper.gradle
@@ -1,16 +1,11 @@
+import java.nio.file.Path
+import java.nio.file.Paths
+import java.nio.file.Files
 import java.text.MessageFormat
 
 
-ext.newFile = {File parent, String... childs ->
-	for (String child : childs) {
-		parent = new File(parent, child);
-	}
-	return parent;
-}
-
-
 class UpdateLibrariesTask extends DefaultTask {
-	File directory
+	Path directory
 	List<Map> libraries
 	Set<String> manualLibraries = new HashSet<>();
 
@@ -24,8 +19,8 @@ class UpdateLibrariesTask extends DefaultTask {
 
 			librariesNames.add(libraryName)
 
-			File libraryFile = new File(directory, libraryName)
-			if (!libraryFile.exists()) {
+			Path libraryFile = directory.resolve(libraryName)
+			if (Files.notExists(libraryFile)) {
 				logger.lifecycle(MessageFormat.format("Downloading library {0} from {1}", libraryName, url))
 				ant.get(src: url, dest: libraryFile)
 			} else {
@@ -33,13 +28,14 @@ class UpdateLibrariesTask extends DefaultTask {
 			}
 		})
 
-		directory.listFiles()
-		.findAll({
-			!librariesNames.contains(it.getName()) && !manualLibraries.contains(it.getName())
+		Files.list(directory)
+		.filter({
+			String filename = it.getFileName().toString()
+			!librariesNames.contains(filename) && !manualLibraries.contains(filename)
 		})
 		.each({
-			logger.lifecycle(MessageFormat.format("Deleting old library {0}", it.getName()))
-			it.delete()
+			logger.lifecycle(MessageFormat.format("Deleting old library {0}", it.getFileName()))
+			Files.delete(it)
 		})
 	}
 
@@ -49,7 +45,7 @@ ext.UpdateLibrariesTask = UpdateLibrariesTask
 
 
 class BuildLibraryTask extends DefaultTask {
-	File targetDirectory
+	Path targetDirectory
 	String targetLibraryName
 	String builderUrl
 	String buildCommand
@@ -58,21 +54,21 @@ class BuildLibraryTask extends DefaultTask {
 
 	@TaskAction
 	def update() {
-		File libraryFile = new File(targetDirectory, targetLibraryName)
-		File buildDirectory = new File(new File("build_libraries"), targetLibraryName)
-		buildDirectory.mkdirs()
-		if (!libraryFile.exists()) {
+		Path libraryFile = targetDirectory.resolve(targetLibraryName)
+		Path buildDirectory = getProject().buildDir.toPath().toAbsolutePath().resolve("libraries").resolve(targetLibraryName)
+		Files.createDirectories(buildDirectory)
+		if (Files.notExists(libraryFile)) {
 			logger.lifecycle(MessageFormat.format("Building library {0} from {1}", targetLibraryName, builderUrl))
-			File builder = new File(buildDirectory, builderName)
-			ant.get(src: builderUrl, dest: builder)
+			ant.get(src: builderUrl, dest: buildDirectory.resolve(builderName))
 			getProject().exec {
-				workingDir = buildDirectory
+				workingDir = buildDirectory.toFile()
 				commandLine = buildCommand.replace("{BUILDER}", builderName).split("\\s+")
 			}
-			java.nio.file.Files.copy(
-				getProject().newFile(buildDirectory, builtLibraryName).getAbsoluteFile().toPath(),
-				libraryFile.getAbsoluteFile().toPath()
-			)
+			Path builtLibraryFile = buildDirectory
+			for (String builtLibraryElementName : builtLibraryName) {
+				builtLibraryFile = builtLibraryFile.resolve(builtLibraryElementName)
+			}
+			Files.copy(builtLibraryFile, libraryFile)
 		} else {
 			logger.lifecycle(MessageFormat.format("Skipping building of library {0} because it already exists", targetLibraryName))
 		}
