--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,43 @@
-import java.nio.file.Path
-import java.nio.file.Paths
-import java.nio.file.Files
+buildscript {
+	repositories {
+		mavenCentral()
+		maven {
+			url 'https://jitpack.io'
+		}
+	}
+	dependencies {
+		classpath group: 'com.github.HurricaneGamesOrg', name: 'ManualGradleDependencySupplier', version: '1e9e953fb4'
+	}
+}
 
 plugins {
 	id 'com.github.johnrengelman.shadow' version '5.0.0'
 	id 'java'
 }
 
-apply from: 'gradle/helper.gradle'
+apply plugin: 'org.hurricanegames.ManualGradleDependencySupplier'
 
 
 defaultTasks 'build'
 
 
 group 'protocolsupport'
-version '1.4.dev'
+version '1.16.2-1'
+
+
+import java.nio.file.Path
+import java.nio.file.Paths
+import java.nio.file.Files
+
+import org.hurricanegames.manualgradledependencysupplier.DependencySupplier
+import org.hurricanegames.manualgradledependencysupplier.DownloadDependencySupplier
+import org.hurricanegames.manualgradledependencysupplier.ManualGradleDependencySupplier
 
 
 Path projectDirectoryPath = projectDir.toPath().toAbsolutePath()
 
 
 sourceCompatibility = JavaVersion.VERSION_1_8
-
-Path librariesRuntimeDirectoryPath = projectDirectoryPath.resolve("libraries_runtime")
-Path librariesShadeDirectoryPath = projectDirectoryPath.resolve("libraries_shade")
-
-
-task setupFolders(type: DefaultTask) {doLast{
-	Files.createDirectories(librariesRuntimeDirectoryPath)
-	Files.createDirectories(librariesShadeDirectoryPath)
-}}
-
-
-task updateRuntimeLibraries(type: UpdateLibrariesTask) {
-	directory = librariesRuntimeDirectoryPath
-	libraries = [
-		[url: "https://papermc.io/api/v1/travertine/1.16/157/download", name: "bungeecord-1.16.2-1.jar"]
-	]
-}
-
-task updateShadeLibraries(type: UpdateLibrariesTask) {
-	directory = librariesShadeDirectoryPath
-	libraries = []
-}
-
 
 sourceSets {
 	main {
@@ -61,10 +55,19 @@ repositories {
 }
 
 dependencies {
-	compileOnly fileTree(dir: librariesRuntimeDirectoryPath, include: '*.jar')
-	compile fileTree(dir: librariesShadeDirectoryPath, include: '*.jar')
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 	compile group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.2'
+
+	compileOnly ManualGradleDependencySupplier.supplyDependecies(
+		projectDirectoryPath.resolve('libraries_runtime'),
+		[
+			new DownloadDependencySupplier(
+				'bungeecord-1.16.2-1.jar',
+				new URL('https://papermc.io/api/v1/travertine/1.16/157/download')
+			)
+		],
+		true
+	)
 }
 
 compileJava {
@@ -95,7 +98,7 @@ shadowJar {
 task copyFinalJarToTarget(type: DefaultTask) {doLast{
 	Path targetJarDirectory = projectDirectoryPath.resolve("target")
 	Files.createDirectories(targetJarDirectory)
-	java.nio.file.Files.copy(
+	Files.copy(
 		shadowJar.archivePath.toPath().toAbsolutePath(),
 		targetJarDirectory.resolve(shadowJar.baseName + '.jar'),
 		java.nio.file.StandardCopyOption.REPLACE_EXISTING
@@ -103,10 +106,6 @@ task copyFinalJarToTarget(type: DefaultTask) {doLast{
 }}
 
 
-compileJava.dependsOn(clean)
-compileJava.dependsOn(setupFolders)
-compileJava.dependsOn(updateRuntimeLibraries)
-compileJava.dependsOn(updateShadeLibraries)
 jar.enabled = false
 jar.finalizedBy(shadowJar)
 shadowJar.finalizedBy(copyFinalJarToTarget)
